# restic-backup-wrapper

./: .gitignore  Makefile  README.adoc  README.md  min.toml  pyproject.toml  readme.adoc  ruff.toml  source_readme.adoc
restic_backup_wrapper/: cli.py  commands.tmpl  generate.py  line_tag.py  log.py
tests/: conftest.py  test_generate.py
